--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,12 @@
   <title>Furima</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <script type="text/javascript" src="https://js.pay.jp/v1/"></script>
+  <script type="text/javascript" src="https://js.pay.jp/v2/pay.js"></script>
+  <%
+=begin%>
+ <script type="text/javascript" src="https://js.pay.jp/v1/"></script> 
+<%
+=end%>
   <%= stylesheet_link_tag 'application', media: 'all'%>
   <%= javascript_pack_tag 'application' %>
 </head>
