--- a/app/views/purchase_records/index.html.erb
+++ b/app/views/purchase_records/index.html.erb
@@ -31,7 +31,7 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with(model: @purchase_address, url: item_purchase_records_path, local: true, class: 'transaction-form-wrap') do |f| %>
+    <%= form_with(model: @purchase_address, url: item_purchase_records_path, local: true, id: 'charge-form', class: 'transaction-form-wrap') do |f| %>
     <%= render partial: 'shared/error_messages', locals: { model: @purchase_address } %>
 
  <%# カード情報の入力 %>
@@ -44,7 +44,12 @@
           <label class="form-text">カード情報</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field (:hoge), class:"input-default", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
+        <div id="number-form" class="input-default"></div>
+        <%
+=begin%>
+ <%= f.text_field (:number), class:"input-default", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %> 
+<%
+=end%>
         <div class='available-card'>
           <%= image_tag 'card-visa.gif', class: 'card-logo'%>
           <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
@@ -58,10 +63,15 @@
           <span class="indispensable">必須</span>
         </div>
         <div class='input-expiration-date-wrap'>
-          <%= f.text_area :hoge, class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
+        <div id="expiry-form" class="input-default"></div>
+          <%
+=begin%>
+ <%= f.text_area :exp_manth, class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
           <p>月</p>
-          <%= f.text_area :hoge, class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
-          <p>年</p>
+          <%= f.text_area :exp_year, class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
+          <p>年</p> 
+<%
+=end%>
         </div>
       </div>
       <div class="form-group">
@@ -69,7 +79,12 @@
           <label class="form-text">セキュリティコード</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field :hoge, class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
+        <div id="cvc-form" class="input-default"></div>
+        <%
+=begin%>
+ <%= f.text_field :cvc, class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %> 
+<%
+=end%>
       </div>
     </div>
     <%# /カード情報の入力 %> 
